--- a/prpcServiceUtils_84/prpcServiceUtils_84/prpcServiceUtils/scripts/utils/prpcServiceUtils.properties
+++ b/prpcServiceUtils_84/prpcServiceUtils_84/prpcServiceUtils/scripts/utils/prpcServiceUtils.properties
@@ -9,7 +9,7 @@
 #	pega.rest.username=<username to access REST service>
 #	pega.rest.password=<service password>
 
-pega.rest.server.url=http:localhost:8080/prweb
+pega.rest.server.url=http:40.69.153.46:8080/prweb
 pega.rest.username=Administrator@pega.com
 pega.rest.password=install@12
 pega.rest.proxy.host=
